// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the default Accordion Component 1`] = `
<Accordion
  alternateTitle=""
  initialPanelState={false}
  title="Dummy Accordion"
>
  <div
    className="accordion"
  >
    <div
      className="title"
      onClick={[Function]}
    >
      <div
        className="arrow-wrapper"
      >
        <i
          className="fa fa-angle-down"
        />
      </div>
      <span
        className="title-text"
      >
        Dummy Accordion
      </span>
    </div>
    <div
      className="content"
    >
      <div
        className="content-text"
      >
        <Content>
          <div
            className="container1"
          >
            <h1>
              This is a content title for accordion
            </h1>
            <p>
              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
            </p>
          </div>
        </Content>
      </div>
    </div>
  </div>
</Accordion>
`;

exports[`show the accordion content with alternative title when clicked 1`] = `
<Accordion
  alternateTitle="I am different"
  initialPanelState={false}
  title="Dummy Accordion"
>
  <div
    className="accordion"
  >
    <div
      className="title"
      onClick={[Function]}
    >
      <div
        className="arrow-wrapper"
      >
        <i
          className="fa fa-angle-down"
        />
      </div>
      <span
        className="title-text"
      >
        Dummy Accordion
      </span>
    </div>
    <div
      className="content"
    >
      <div
        className="content-text"
      >
        <Content>
          <div
            className="container1"
          >
            <h1>
              This is a content title for accordion
            </h1>
            <p>
              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
            </p>
          </div>
        </Content>
      </div>
    </div>
  </div>
</Accordion>
`;
